# Panda-Helper

./: .gitignore  .pre-commit-config.yaml  .pylintrc  404.html  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  conda_environment_dev.yaml  conda_requirements.yaml  index.html  mkdocs.yml  objects.inv  pyproject.toml  reports.py  requirements.txt  robots.txt  setup.cfg  sitemap.xml
.github/workflows/: deploy_page.yml  format_lint.yml  format_lint_old.yml  pytest.yml  pytest_old.yml
api/: index.html
docs/: api.md  index.md  install.md  tutorial.md  user_guide.md
install/: index.html
overrides/: 404.html
search/: search_index.json
src/: reports.py
src/pandahelper/: __init__.py  profiles.py  reports.py  stats.py  times.py
stylesheets/: extra.css
tests/: __init__.py  conftest.py  test_profiles.py  test_reports.py  test_stats.py  test_times.py  utils.py
tests/test_data/: sample_collisions.csv  test_df_profile.txt  test_df_profile_name.txt  test_df_profile_name_311.txt  test_df_profile_no_name.txt  test_df_profile_no_name_311.txt  test_df_report.txt  test_df_time_profile.txt  test_series_borough_profile.txt  test_series_injured_profile.txt  test_series_injured_report.txt  test_series_time_profile.txt
tutorial/: index.html
