[metadata]
name = panda-helper
version = 0.0.1
author = Ray310
author_email = ray310@pm.me
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Topic :: Scientific/Engineering
description = Data profiler for Pandas
keywords = data-profiling
license = MIT
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
platforms = any
project_urls =
    Homepage = https://github.com/ray310/Panda-Helper
    Tracker = https://github.com/ray310/Panda-Helper/issues


[options]
include_package_data = true
install_requires =
    pandas
    scipy>=1.5
    tabulate
packages = find:
package_dir =
    = src
python_requires = >=3.6


[options.packages.find]
where = src
